# SciNetz

./: .env.example  .gitignore  140  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  PHASE3_STATUS.md  PLAN.md  PLAN_neo4j_property_fix.md  config.yaml  docker-compose.yaml  latest_share.html  pyproject.toml
backend/: Dockerfile  __init__.py
backend/app/: __init__.py  config.py  contracts.py  main.py
docs/: observability-dashboard.md
export/: README.md  scinets_view.html
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: EvidenceDrawer.tsx  FiltersPanel.tsx  GraphCanvas.tsx  PaperList.tsx  QAPanel.tsx  UploadPanel.tsx  auth-guard.tsx  auth-provider.tsx  graph-explorer.tsx  graph-visualization.tsx  header.tsx  qa-panel.tsx  semantic-search.tsx  sidebar.tsx
frontend/lib/: api.ts  http.ts  types.ts
frontend/tests/: app.spec.ts
frontend/types/: auth.ts  external.d.ts
neo4j/init/: 001_indexes.cypher
requirements/: base.txt  dev.txt
scripts/: analyze_extraction_log.py  check_api_health.py  check_package_index.py  create_phase1_pdfs.py
tests/: conftest.py
tests/backend/: test_ui_layout.py
tests/phase_0/: test_api_health_check.py  test_config.py  test_contracts.py  test_dependencies.py  test_docker_compose.py  test_health.py  test_package_index_check.py
tests/phase_1/: test_parsing.py
tests/phase_10/: test_observability.py
tests/phase_2/: __init__.py  test_entity_inventory.py
(+115 files in other folders)
