[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scinets-backend"
version = "0.0.1"
description = "SciNets research knowledge graph extraction system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7,<3.0",
    "PyYAML>=6.0,<7.0",
    "docling>=2.55.1,<3.0",
    "rapidfuzz>=3.9,<4.0",
    "httpx>=0.27,<0.28"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.27"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["backend*"]
